# Mnist_Neural_Network

./: CMakeLists.txt  README.md  build.sh  log_predictions.txt  main_program  main_program.cpp  mnist.sh  read_dataset_images.sh  read_dataset_labels.sh  run.sh
include/: read_mnist.h
logs/: eval_accuracy_log.py  log_predictions.txt
mnist-configs/: input-ci.config  input.config
src/: main.cpp  neural_network.cpp  read_dataset_images.cpp  read_dataset_labels.cpp  read_mnist.cpp  tensor.hpp
